# ANSCER-Assignment

./: README.md  trajectory.json
trajectory_visualization/: CMakeLists.txt  package.xml
trajectory_visualization/launch/: trajectory_visualization.launch.py
trajectory_visualization/rviz/: trajectory_visualization.rviz
trajectory_visualization/src/: trajectory_publisher_saver.cpp  trajectory_reader_publisher.cpp
